feat(role): 添加角色继承功能支持RBAC1模型
- 在数据库表中添加parent_id字段用于角色继承关系
- 新增RoleTreeVO类用于角色树形结构展示
- 实现角色继承权限查询功能，子角色自动继承父角色权限
- 添加角色循环继承校验机制防止无限循环
- 提供角色树形结构API接口用于前端展示层级关系
- 更新用户权限获取逻辑以支持角色继承模型